# TP2_INF8770

./: analyse.py  dct.py  dwt.py  pyproject.toml  requirements.txt
